--- a/templates/browse.html
+++ b/templates/browse.html
@@ -13,7 +13,7 @@
       <tbody>
         {% for file in files %}
         <tr>
-          <td><a href="/files/{{ file }}">{{ file }}</a></td>
+          <td><a href="/StoredData/{{ file }}">{{ file }}</a></td>
         </tr>
         {% endfor %}
       </tbody>
